[package]
name = "sol-indexer"
version = "0.1.0"
edition = "2021"
description = "High-performance Solana indexing service"

[[bin]]
name = "sol-indexer"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
bs58 = "0.5"
borsh = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
dotenv = "0.15"
config = "0.14"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
axum = "0.7"
bytes = "1"
futures = "0.3"
async-trait = "0.1"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
